# user-and-product-system

./: .gitignore  config.py  main.py  pyproject.toml  test_users.py
db/: db.py  users.json
products/: routes.py
user/: user_controllers.py  user_models.py  user_routes.py
