[tool.poetry]
name = "fastapi-poetry"
version = "0.1.0"
description = ""
authors = ["Bube"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
bcrypt = "^4.1.2"
httpx = "^0.27.0"
coverage = "^7.4.4"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
